--- a/src/javalab4/CreateProfilePanel.form
+++ b/src/javalab4/CreateProfilePanel.form
@@ -19,41 +19,14 @@
           <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-                      <Component id="titleLabel" min="-2" pref="294" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="nameLabel" alignment="0" min="-2" pref="59" max="-2" attributes="0"/>
-                                  <Component id="employeeIDLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="ageLabel" alignment="0" min="-2" pref="59" max="-2" attributes="0"/>
-                                  <Component id="genderLabel" alignment="0" min="-2" pref="59" max="-2" attributes="0"/>
-                                  <Component id="startDateLabel" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="levelLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="phoneLabel" alignment="0" max="32767" attributes="0"/>
-                              </Group>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="levelField" min="-2" pref="234" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="nameField" max="32767" attributes="0"/>
-                                      <Component id="employeeIDAns" max="32767" attributes="0"/>
-                                      <Component id="genderField" alignment="1" max="32767" attributes="0"/>
-                                      <Component id="startDateField" alignment="0" min="-2" pref="234" max="-2" attributes="0"/>
-                                      <Component id="ageField" alignment="0" max="32767" attributes="0"/>
-                                  </Group>
-                                  <Component id="phoneField" alignment="0" min="-2" pref="234" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
-                          <Group type="102" alignment="1" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="mailLabel" alignment="0" min="-2" pref="132" max="-2" attributes="0"/>
                                   <Component id="browsePhotoButton" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="mailField" min="-2" pref="234" max="-2" attributes="0"/>
                                   <Group type="103" alignment="0" groupAlignment="1" attributes="0">
@@ -62,10 +35,35 @@
                                   </Group>
                               </Group>
                           </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="nameLabel" alignment="0" min="-2" pref="59" max="-2" attributes="0"/>
+                                  <Component id="genderLabel" alignment="0" min="-2" pref="59" max="-2" attributes="0"/>
+                                  <Component id="startDateLabel" alignment="0" pref="141" max="32767" attributes="0"/>
+                                  <Component id="levelLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="phoneLabel" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="ageLabel" alignment="0" min="-2" pref="59" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="levelField" min="-2" pref="234" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Component id="nameField" max="32767" attributes="0"/>
+                                      <Component id="genderField" alignment="1" max="32767" attributes="0"/>
+                                      <Component id="startDateField" alignment="0" min="-2" pref="234" max="-2" attributes="0"/>
+                                      <Component id="ageField" alignment="0" max="32767" attributes="0"/>
+                                  </Group>
+                                  <Component id="phoneField" min="-2" pref="234" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
                       </Group>
                   </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                      <Component id="titleLabel" min="-2" pref="294" max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace pref="283" max="32767" attributes="0"/>
+              <EmptySpace min="280" max="32767" attributes="0"/>
           </Group>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
@@ -86,37 +84,32 @@
                   <Component id="nameField" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="nameLabel" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="ageLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="ageField" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="employeeIDLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="employeeIDAns" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="genderLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="genderField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="ageLabel" min="-2" max="-2" attributes="0"/>
-                  <Component id="ageField" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="startDateLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="startDateField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="genderLabel" min="-2" max="-2" attributes="0"/>
-                  <Component id="genderField" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="startDateLabel" min="-2" max="-2" attributes="0"/>
-                  <Component id="startDateField" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="levelLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="levelField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="phoneField" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="phoneLabel" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="mailField" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="mailLabel" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -126,9 +119,9 @@
                   <Component id="browsePhotoButton" min="-2" max="-2" attributes="0"/>
                   <Component id="photoDisplayLabel" min="-2" pref="159" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
               <Component id="saveButton" min="-2" pref="32" max="-2" attributes="0"/>
-              <EmptySpace pref="238" max="32767" attributes="0"/>
+              <EmptySpace pref="201" max="32767" attributes="0"/>
           </Group>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
@@ -159,16 +152,6 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nameFieldActionPerformed"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JLabel" name="employeeIDLabel">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Employee ID:"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="employeeIDAns">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="&lt;&lt;random ID here&gt;&gt;"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="ageLabel">
       <Properties>
