--- a/src/javalab4/CreateProfilePanel.form
+++ b/src/javalab4/CreateProfilePanel.form
@@ -65,13 +65,6 @@
               </Group>
               <EmptySpace min="280" max="32767" attributes="0"/>
           </Group>
-          <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
-                  <EmptySpace min="-2" pref="256" max="-2" attributes="0"/>
-                  <Component id="photoDisplayLabel1" max="32767" attributes="0"/>
-                  <EmptySpace min="-2" pref="256" max="-2" attributes="0"/>
-              </Group>
-          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -119,16 +112,9 @@
                   <Component id="browsePhotoButton" min="-2" max="-2" attributes="0"/>
                   <Component id="photoDisplayLabel" min="-2" pref="159" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="saveButton" min="-2" pref="32" max="-2" attributes="0"/>
-              <EmptySpace pref="201" max="32767" attributes="0"/>
-          </Group>
-          <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="220" max="-2" attributes="0"/>
-                  <Component id="photoDisplayLabel1" min="-2" pref="159" max="-2" attributes="0"/>
-                  <EmptySpace pref="421" max="32767" attributes="0"/>
-              </Group>
+              <EmptySpace pref="232" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -217,8 +203,6 @@
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="photoDisplayLabel">
-    </Component>
-    <Component class="javax.swing.JLabel" name="photoDisplayLabel1">
     </Component>
     <Component class="javax.swing.JTextField" name="ageField">
       <Events>
