--- a/src/javalab4/MainJFrame.form
+++ b/src/javalab4/MainJFrame.form
@@ -85,6 +85,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="View Details"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="viewDetailsButtonActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
