--- a/src/javalab4/ViewDetailsPanel.form
+++ b/src/javalab4/ViewDetailsPanel.form
@@ -197,6 +197,7 @@
     <Component class="javax.swing.JTextField" name="searchField">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="searchFieldActionPerformed"/>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="searchFieldKeyReleased"/>
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="mailField">
