--- a/src/javalab4/CreateProfilePanel.form
+++ b/src/javalab4/CreateProfilePanel.form
@@ -47,13 +47,19 @@
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="levelField" min="-2" pref="234" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="nameField" max="32767" attributes="0"/>
-                                      <Component id="genderField" alignment="1" max="32767" attributes="0"/>
-                                      <Component id="startDateField" alignment="0" min="-2" pref="234" max="-2" attributes="0"/>
-                                      <Component id="ageField" alignment="0" max="32767" attributes="0"/>
-                                  </Group>
                                   <Component id="phoneField" min="-2" pref="234" max="-2" attributes="0"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                          <Component id="nameField" max="32767" attributes="0"/>
+                                          <Component id="genderField" alignment="1" max="32767" attributes="0"/>
+                                          <Component id="startDateField" alignment="0" min="-2" pref="234" max="-2" attributes="0"/>
+                                          <Component id="ageField" alignment="0" max="32767" attributes="0"/>
+                                      </Group>
+                                      <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
+                                      <Component id="employeeIDLabel" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                                      <Component id="employeeIDField" min="-2" pref="140" max="-2" attributes="0"/>
+                                  </Group>
                               </Group>
                           </Group>
                       </Group>
@@ -63,7 +69,7 @@
                       <Component id="titleLabel" min="-2" pref="294" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace min="280" max="32767" attributes="0"/>
+              <EmptySpace min="280" pref="20" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -76,6 +82,8 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="nameField" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="nameLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="employeeIDLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="employeeIDField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -215,6 +223,22 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="saveButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="employeeIDLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Employee ID:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="employeeIDField">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="cc" green="cc" red="cc" type="rgb"/>
+        </Property>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="employeeIDFieldActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
